--- a/style.css
+++ b/style.css
@@ -41,11 +41,13 @@ header{
     top: 0;
     left: 0;
     width: 100%;
-    padding: 5rem 8rem 1.2rem 13rem;
+    padding: 4rem 8rem 2rem 13rem;
     background-color:inherit ;
     display: flex;
     align-items: center;
     z-index: 100;
+    box-shadow:  0 .4rem .9rem yellowgreen;
+
 }
 
 #themeToggle {
@@ -148,8 +150,9 @@ section {
 }
 
 .home-content p{
-    font-size: 2.3rem;
+    font-size: 3rem;
     line-height: 1.3;
+    text-align: justify;
 }
 
 .home-content .social-media a{
@@ -183,9 +186,119 @@ section {
     font-size: 2rem;
     letter-spacing: .1rem;
     font-weight: 700;
-    
 }
 
 .btn:hover{
     background-color: yellowgreen;
+}
+
+.about{
+    display: flex;
+}
+
+#about h2{
+    font-size: 5.6rem;
+    font-weight: 700;
+    padding: 4rem 0rem 4rem 0rem;
+}
+
+.about .about-content{
+    width: 70%;
+    font-size: 3rem;
+    line-height: 1.3;
+    text-align: justify;
+    padding-right: 5rem;
+}
+
+.about .about-info{
+    font-size: 3rem;
+    padding-left: 5rem;
+}
+
+.about .about-info p{
+    padding-bottom: 3rem;
+    margin-bottom: .5rem;
+    border-color: yellowgreen;
+}
+
+.contact h2{
+    text-align: center;
+    font-size: 5.6rem;
+    font-weight: 700;
+    padding: 4rem;
+    margin-top: 5rem;
+}
+
+span{
+    color: yellowgreen;
+}
+
+.contact form{
+    max-width: 100rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.contact form .input-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .input-box input,
+.contact form textarea{
+    width: 100%;
+    padding: 1.5rem;
+    font-size: 2rem;
+    color: inherit;
+    background-color: inherit;
+    border-radius: .8rem;
+    margin: .9rem 0;
+    box-shadow: 0 .1rem .5rem yellowgreen;
+}
+
+.contact form textarea{
+    resize: none;
+}
+
+.contact form .btn{
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 7%;
+    background-color: yellowgreen;
+}
+
+.footer-text p{
+    color: inherit;
+    font-size: 2rem;
+    font-weight: 400;
+
+}
+
+.footer-iconTop a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    color: inherit;
+    padding: .2rem;
+    border-radius: .8rem;
+    border: .2rem solid yellowgreen;
+    outline: .2rem solid transparent;
+    transition: .5s ease;
+}
+
+.footer-iconTop a:hover{
+    outline-color: inherit;
+}
+
+.footer-iconTop a i{
+    font-size: 4rem;
 }
