--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ section {
     background-color: inherit;
     color: inherit;
     border-radius: .6rem;
-    box-shadow: 0 .2rem .5rem yellowgreen;
+    box-shadow: .2rem .2rem .5rem yellowgreen;
     font-size: 2rem;
     letter-spacing: .1rem;
     font-weight: 700;
@@ -204,10 +204,15 @@ section {
 
 .about .about-content{
     width: 70%;
-    font-size: 3rem;
+    font-size: 2.9rem;
     line-height: 1.3;
     text-align: justify;
     padding-right: 5rem;
+}
+
+.about .about-content a{
+    color: yellowgreen;
+    text-decoration: underline;
 }
 
 .about .about-info{
