--- a/style.css
+++ b/style.css
@@ -46,8 +46,6 @@ header{
     display: flex;
     align-items: center;
     z-index: 100;
-    box-shadow:  0 .4rem .9rem yellowgreen;
-
 }
 
 #themeToggle {
@@ -137,8 +135,13 @@ section {
 
 .home .home-content{
     max-width: 70rem;
-
 }
+
+.home-content h2{
+    font-size: 5rem;
+    font-weight: 600;
+}
+
 .home-content h3{
     font-size: 3.2rem;
     font-weight: 600;
@@ -151,7 +154,7 @@ section {
 
 .home-content p{
     font-size: 3rem;
-    line-height: 1.3;
+    line-height: 1.2;
     text-align: justify;
 }
 
@@ -203,8 +206,9 @@ section {
 }
 
 .about .about-content{
+    flex: 5;
     width: 70%;
-    font-size: 2.9rem;
+    font-size: 3rem;
     line-height: 1.3;
     text-align: justify;
     padding-right: 5rem;
@@ -216,14 +220,54 @@ section {
 }
 
 .about .about-info{
+    flex: 2;
     font-size: 3rem;
-    padding-left: 5rem;
+    justify-content: center;
+    text-align: center;
+}
+
+.about .about-info .about-image{
+    position: relative;
+    height: 40rem;
+    width: 40rem;
+    border-radius: 50%;
+    margin-bottom: 5rem;
+    margin-top: 5rem;
+}
+
+.about .about-info .about-image img{
+    margin-top: 2rem;
+    width: 90%;
+    border-radius: 50%;
+    border: .4rem solid yellowgreen;
+}
+
+.about .about-info .about-image .circle-spin{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border-bottom: .5rem dashed yellowgreen;
+    border-top: .5rem dashed yellowgreen;
+    border-left: .5rem solid yellowgreen;
+    border-right: .5rem solid yellowgreen;
+    animation: aboutSpinner 8s linear infinite;
 }
 
 .about .about-info p{
-    padding-bottom: 3rem;
-    margin-bottom: .5rem;
-    border-color: yellowgreen;
+    text-align: left;
+    padding: 1.5rem;
+    border-bottom: .2rem solid yellowgreen;
+    margin-top: 1rem;
+}
+
+.skill h2{
+    font-size: 5.6rem;
+    font-weight: 700;
+    padding: 4rem 0rem 4rem 0rem;
 }
 
 .contact h2{
@@ -306,4 +350,10 @@ footer{
 
 .footer-iconTop a i{
     font-size: 4rem;
+}
+
+@keyframes aboutSpinner {
+    100%{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
