--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
 .light-theme {
-    background-color: white;
+    background-color: #e1e1e1;
     color: #333;
+
     --accent-color: yellowgreen;
-    
+    --text-color: #333;
+    --background-color: #e1e1e1;
+
+    transition: .5s ease;
 }
   
 .dark-theme {
     background-color: #333;
-    color: white;
+    color: #e1e1e1;
+
     --accent-color: #FFD700;
+    --text-color: #e1e1e1;
+    --background-color: #333;
+    
+    transition: .5s ease;
 }
 
 .srb {
@@ -35,6 +44,8 @@ span{
     color: var(--accent-color);
 }
 
+/*================= HEADER =================*/
+
 .switch {
     position: relative;
     display: inline-block;
@@ -49,16 +60,23 @@ header{
     left: 0;
     width: 100%;
     padding: 4rem 8rem 2rem 13rem;
-    background-color:inherit ;
+    background-color:var(--background-color) ;
     display: flex;
     align-items: center;
     z-index: 100;
+    transition: .5s ease;
+}
+
+header.scrolled{
+    background-color: var(--accent-color);
+    box-shadow: 0 1.5rem 2rem var(--accent-color);
+    
 }
 
 #themeToggle {
     position: relative;
     cursor: pointer;
-    color: inherit;
+    color: var(--text-color);
     margin-left: 11rem;
     width: 4rem;
     height: 4rem;
@@ -69,7 +87,7 @@ header{
 }
 
 header nav a{
-    color: inherit;
+    color: var(--text-color);
     font-size: 2.9rem;
     font-weight: 700;
     margin-right: 5rem;
@@ -135,6 +153,8 @@ section {
     padding: 10rem 7% 2rem;
 }
 
+/*================= HOME =================*/
+
 .home{
     display: flex;
     align-items: center;
@@ -171,36 +191,39 @@ section {
     align-items: center;
     width: 4rem;
     height: 4rem;
-    background: transparent;
+    background: var(--accent-color);
     border: .2rem solid inherit;
     border-radius: 50%;
     box-shadow: 0 .2rem .5rem var(--accent-color);
     font-size: 2rem;
-    color: inherit;
+    color: black;
     margin: 2.5rem 1.5rem 3rem 0;
     transition: .5s ease;
 }
 
 .home-content .social-media a:hover{
-    background-color: var(--accent-color);
-    color: inherit;
+    background-color: transparent;
+    color: var(--text-color);
 }
 
 .btn {
     display: inline-block;
     padding: 1.2rem 2.8rem;
-    background-color: inherit;
-    color: inherit;
+    background-color: var(--accent-color);
+    color: black;
     border-radius: .6rem;
     box-shadow: .2rem .2rem .5rem var(--accent-color);
     font-size: 2rem;
     letter-spacing: .1rem;
     font-weight: 700;
+    transition: .5s ease;
 }
 
 .btn:hover{
-    background-color: var(--accent-color);
+    background-color: transparent;
 }
+
+/*================= ABOUT =================*/
 
 .about{
     display: flex;
@@ -271,6 +294,8 @@ section {
     margin-top: 1rem;
 }
 
+/*================= SKILLS =================*/
+
 .skill h2{
     font-size: 5.6rem;
     font-weight: 700;
@@ -309,16 +334,155 @@ section {
 .skill-title h3{
     padding: 1rem;
     font-size: 3rem;
-    color: inherit;
+    color: var(--text-color);
 }
 
 .skill .skill-text{
-    color: inherit;
+    color: var(--text-color);
     flex: 6;
     font-size: 3rem;
     padding: 2rem;
     text-align: justify;
 }
+
+/*================= PROJECTS =================*/
+
+.projects h2{
+    font-size: 5.6rem;
+    font-weight: 700;
+    padding: 4rem 0rem 4rem 0rem;
+    color: var(--accent-color);
+}
+
+.section__border{
+    margin-top: 1rem;
+    height: 70rem;
+}
+
+.projects__container{
+    padding: 3rem;
+    width: 100%;
+    height: 100%;
+    border-radius: 5rem;
+    border-style: solid;
+    border-top-color: var(--accent-color);
+    border-bottom-color: var(--accent-color);
+    border-left-color: var(--background-color);
+    border-right-color: var(--background-color);
+}
+
+.projects__content{
+    padding: 3rem;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+}
+
+.projects__img{
+    border-radius: 3rem;
+    width: 70rem;
+    align-items: center;
+}
+
+.image-container {
+    position: relative;
+}
+
+.overlay{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgb(0, 0, 0, 0.75);
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+    transition: .5s ease;
+}
+
+.overlay h3{
+    text-align: center;
+    color: var(--accent-color);
+    font-size: 3rem;
+    padding: 1rem;
+}
+
+.overlay p{
+    text-align: justify;
+    color: var(--accent-color);
+    font-size: 2rem;
+    padding: 1rem;
+}
+
+.image-container:hover .overlay {
+    height: 100%;
+    border-radius: 3rem;
+    backdrop-filter: blur(5px);
+}
+
+.projects__subtitle{
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.projects__title{
+    font-size: 3rem;
+    margin-bottom: 1.25rem;
+}
+
+.projects__button{
+    color: var(--accent-color);
+    display: inline-flex;
+    align-items: center;
+    column-gap: .5rem;
+    font-size: 2rem;
+}
+
+.projects__button i{
+    font-size: 2rem;
+    transition: transform .3s;
+}
+
+.projects__button:hover i{
+    transform: translateX(.25rem);
+}
+
+.projects__container .swiper-button-prev::after,
+.projects__container .swiper-button-next::after{
+    content: '';
+}
+
+.projects__container .swiper-button-prev,
+.projects__container .swiper-button-next{
+    width: initial;
+    height: initial;
+    margin: initial;
+    font-size: 6.5rem;
+    color: var(--accent-color);
+}
+
+.projects__container .swiper-button-prev{
+    
+}
+
+.projects__container .swiper-button-next{
+    
+}
+
+.projects__container .swiper-pagination-bullets{
+    margin-bottom: 1rem;
+    bottom: 0;
+}
+
+.projects__container .swiper-pagination-bullet{
+    background-color: var(--text-color);
+}
+
+.projects__container .swiper-pagination-bullet-active{
+    background-color: var(--accent-color);
+}
+
+/*================= CONTACT =================*/
 
 .contact{
     min-height: auto;
@@ -350,8 +514,8 @@ section {
     width: 100%;
     padding: 1.5rem;
     font-size: 2rem;
-    color: inherit;
-    background-color: inherit;
+    color: var(--text-color);
+    background-color: var(--background-color);
     border-radius: .8rem;
     margin: .9rem 0;
     box-shadow: 0 .1rem .5rem var(--accent-color);
@@ -366,6 +530,8 @@ section {
     cursor: pointer;
 }
 
+/*================= FOOTER =================*/
+
 footer{
     display: flex;
     justify-content: space-between;
@@ -376,7 +542,7 @@ footer{
 }
 
 .footer-text p{
-    color: inherit;
+    color: black;
     font-size: 2rem;
     font-weight: 700;
 }
@@ -385,7 +551,7 @@ footer{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    color: inherit;
+    color: black;
     padding: .2rem;
     border-radius: .8rem;
     border: .2rem solid var(--accent-color);
