--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .light-theme {
-    background-color: hsl(40, 48%, 88%);
-    color: hsl(40, 48%, 12%);
+    background-color: var(--first-background-color);
 
     --accent-color: #7c4700;
     --text-color: hsl(40, 48%, 12%);
@@ -11,8 +10,7 @@
 }
   
 .dark-theme {
-    background-color: #081b29;
-    color: #ededed;
+    background-color: var(--first-background-color);
 
     --accent-color: #00abf0;
     --text-color: #ededed;
@@ -25,6 +23,11 @@
 .srb {
     display: none;
 }
+
+::-webkit-scrollbar{
+    display: none;
+}
+
 
 *{
     margin: 0;
@@ -144,9 +147,14 @@ input:checked + .slider:before {
     border-radius: 50%;
 }
 
+/*================= SECTION =================*/
+
 section {
     min-height: 100vh;
-    padding: 10rem 7% 2rem;
+    padding-top: 10rem;
+    padding-right: 7%;
+    padding-bottom: 2rem;
+    padding-left: 7%;
 }
 
 /*================= HOME =================*/
@@ -155,6 +163,7 @@ section {
     display: flex;
     align-items: center;
     background-color: var(--first-background-color);
+    color: var(--text-color);
 }
 
 .home .home-left{
@@ -232,12 +241,14 @@ section {
 }
 
 .home .home-right img{
+    width: 60rem;
     animation: floatImage 4s ease-in-out infinite;
 }
 /*================= ABOUT =================*/
 
 #about{
     background-color: var(--second-background-color);
+    color: var(--text-color);
 }
 .about{
     display: flex;
@@ -367,6 +378,7 @@ section {
 
 #projects{
     background-color: var(--second-background-color);
+    color: var(--text-color);
 }
 
 .projects h2{
@@ -450,7 +462,7 @@ section {
     color: var(--accent-color);
     display: inline-flex;
     align-items: center;
-    column-gap: .5rem;
+    
     font-size: 2rem;
 }
 
@@ -493,8 +505,8 @@ section {
 /*================= CONTACT =================*/
 
 .contact{
-    min-height: auto;
     background-color: var(--first-background-color);
+    color: var(--text-color);
 }
 
 .contact h2{
@@ -509,7 +521,6 @@ section {
     max-width: 100rem;
     margin: 1rem auto;
     text-align: center;
-    margin-bottom: 15rem;
 }
 
 .contact form .input-box{
@@ -594,4 +605,95 @@ footer{
     100%{
         transform: translateY(0);
     }
+}
+
+@media (max-width: 1840px){
+    .projects__img{
+        width: 60rem;
+    }
+}
+
+@media (max-width: 1610px){
+    .projects__img{
+        width: 50rem;
+    }
+}
+
+@media (max-width: 1530px){
+    html{
+        font-size: 55%;
+    }
+}
+
+@media (max-width: 1348px){
+    html{
+        font-size: 50%;
+    }
+    
+    .projects__img{
+        width: 50rem;
+    }
+}
+
+@media (max-width: 1248px){
+    html{
+        font-size: 45%;
+    }
+}
+
+@media (max-width: 1148px){
+    html{
+        font-size: 40%;
+    }
+}
+
+@media (max-width: 1084px){
+    html{
+        font-size: 35%;
+    }
+}
+
+@media (max-width: 1024px){
+    html{
+        font-size: 70%;
+    }
+    
+    .home{
+        display: block;
+    }
+    
+    .home .home-left{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    header{
+        display: none;
+    }
+}
+
+@media (max-width: 991px){
+    .projects__img{
+        width: 40rem;
+    }
+    
+}
+
+@media (max-width: 786px){
+    .projects__img{
+        width: 35rem;
+    }
+}
+
+@media (max-width: 480px){
+    
+}
+
+@media (max-width: 414px){
+    
+}
+
+@media (max-width: 320px){
+   
 }
