--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header{
     width: 100%;
     padding: 4rem 8rem 2rem 13rem;
     background-color:var(--first-background-color) ;
-    display: flex;
+    display: none;
     align-items: center;
     z-index: 100;
 }
@@ -252,7 +252,7 @@ section {
 }
 
 .home .home-right .home-blob{
-    width: 60rem;
+    width: 50rem;
     fill: var(--accent-color);
     filter: drop-shadow(0 12px 12px var(--accent-color));
     animation: floatImage 4s ease-in-out infinite;
